Committing updates to workspace controller and swagger.json and readme.
